--- a/CSA/Christmas2020/MagPie2020/app/build.gradle
+++ b/CSA/Christmas2020/MagPie2020/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.christmascountdown"
+        applicationId "com.example.magpie2020"
         minSdkVersion 22
         targetSdkVersion 30
         versionCode 1
@@ -36,5 +36,4 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.github.jetradarmobile:android-snowfall:1.2.0'
 }
