--- a/CSA/TripTracker/311_Login/app/src/main/AndroidManifest.xml
+++ b/CSA/TripTracker/311_Login/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TripListActivity"/>
+        <activity android:name=".TripActivity"/>
     </application>
 
 </manifest>
